# edge-tts.cpp

./: CMakeLists.txt  README.md
include/: tts.h
src/: CMakeLists.txt  tts.cpp
test/: CMakeLists.txt  main.cpp  play.cpp
